--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -6,4 +6,4 @@ gem 'middleman', '~> 4.3.5'
 gem 'middleman-autoprefixer', '~> 2.10.1'
 gem 'middleman-search', github: 'workarea-commerce/middleman-search'
 gem 'middleman-navtree', '~> 0.1.10'
-gem 'puma', '~> 4.1.1'
+gem 'puma', '>= 4.3.1'
